test/errors/cannot_cast_string_int.haste
const a = cast[int]"hello";